# enurgen-battery-part1

./: CLAUDE.md  README.md
docs/task1/architecture/: architecture.md
docs/task1/io_spec/: io_spec.md
docs/task1/landscape/: BESS Modeling Landscape Survey + Architecture Recommendations.md  landscape_survey.md
references/: INDEX.md  SCOPE.md  deep-research-report-on-public-materials.md
references/accure/: accure_2024_soc_lfp_whitepaper_summary.md  dubarry_2023_mechanistic_modeling_accure_summary.md  mechanistic_modeling_in_batteries.md
references/ecm/: difonso_2025_ecm_datasheet_lab_summary.md
references/enurgen/: DUET_data_points.csv  DUET_data_points_sparse.csv  solar_plant_hierarchy_annotated.md
references/pyBAMM/: pybamm_continuum_models_liiondb_summary.md
references/review_of_lib_aging_models/: gwayi_2025_empirical_aging_models_review_summary.md
references/sam/: nrel_64171_degradation_mechanisms_summary.md  nrel_64641_sam_technoeconomic_summary.md  nrel_67102_life_prediction_summary.md
references/twaice/: twaice_essrf2023_summary.md
references/zitara/: zitara_lithium_ion_battery_degradation.md
src/bess_engine/: __init__.py  config.py  dispatch.py  engine.py  passthrough.py  pyproject.toml  results.py  run_tests.py  test_engine.py
src/degradation/: __init__.py
